--- a/latex/lab_newton.tex
+++ b/latex/lab_newton.tex
@@ -3,9 +3,9 @@
 
 \input{hw627_header}
 
-\pagestyle{empty}
+%\pagestyle{empty}
 
-\newcommand{\vertgap}{\vspace{1cm}}
+\newcommand{\vertgap}{\vspace{1.5cm}}
 
 % change the figures to ``Figure L3'', etc
 \renewcommand{\thefigure}{L\arabic{figure}}
@@ -36,8 +36,9 @@ Create a copy of the template program: \verb+cp lab_newton_template.m lab_newton
 \item Explain why the following three operations are equivalent: \verb+inv(6)*2+, \verb+6\2+, \verb+1/6*2+. \\
 Type \verb+help \+
 
-\item Open the template program \verb+lab_newton.m+.
+\vertgap
 
+\item Open the template program \verb+lab_newton.m+.
 What are \verb+F+, \verb+g+, and \verb+H+?
 
 \vertgap
@@ -48,11 +49,17 @@ Plot the point $(\bem_{\rm min},\,F(\bem_{\rm min}))$ on the curve $F(\bem)$.
 
 Zoom in to show that this appears to be a true minimum.
 
+\item By hand, sketch your setup for this problem: axes, a curve, your starting point $(\bem_0,\,F(\bem_0))$, your (known) minimum point $(\bem_{\rm min},\,F(\bem_{\rm min}))$. Describe in words how the Newton algorithm will find the minimum of $F(\bem)$. Annotate your sketch with some iterates of $\bem_n$.
+
+\vspace{10cm}
+
 \item Implement the Newton algorithm (Tarantola, 2005, Eq. 6.291), and demonstrate (graphically or numerically) that you reach the minimum.
 
 Plot the point $(\bem,\,F(\bem))$ for each new value of $\bem$.
 
 Try several different starting values of $\bem$ to make sure it works.
+
+\vertgap
 
 \item Define a sensible stopping criterion.
 
@@ -62,15 +69,15 @@ Try several different starting values of $\bem$ to make sure it works.
 
 \vertgap
 
-\item Repeat the experiment for a quadratic function. What happens?
+\item Repeat the experiment for a {\bf quadratic function}. What happens?
 
-\vertgap
 
-\item For the quadratic function, solve for the analytical minimum, $\bem_{\rm min}$, and also $F(\bem_{\rm min})$.
 
-\vertgap
+\item For the {\bf quadratic function}, solve for the analytical minimum $\bem_{\rm min}$ and also $F(\bem_{\rm min})$. Start be writing out $F(m)$ in simplest form.
 
-\item Show mathematically that the Newton algorithm will give the solution.
+\vspace{6cm}
+
+\item Show mathematically that the Newton algorithm will give the solution (still for the quadratic function).
 
 \end{enumerate}
 
