update links to course websites

--- a/latex/misc/project_guidelines.tex
+++ b/latex/misc/project_guidelines.tex
@@ -46,7 +46,7 @@
 {\large \bf Guidelines for Final Project} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 %Assigned: April 10, 2012 --- Due: Thursday, May 3, 2012
-DUE DATE FOR REPORT AND PRESENTATION: Wednesday April 26, 2017 \\
+DUE DATE FOR REPORT AND PRESENTATION: Wednesday December 4, 2019 \\
 Last compiled: \today
 \end{center}
 
@@ -58,8 +58,8 @@ For your final project, you will explore a particular inverse problem or a techn
 %
 \begin{itemize}
 \item The final project is worth 15\% of your final grade.
-\item A proposed title and draft abstract are due (email or hard copy) on Wednesday April 19, 2017.
-\item The final project is due in the form of an in-class presentation on and also a report---both on Wednesday April 26, 2017.
+\item A proposed title and draft abstract are due (by email) on Wednesday November 6.
+\item The final project is due in the form of an in-class presentation on and also a report---both on Wednesday December 4.
 
 \item Final project guidelines.
 %
