--- a/latex/misc/survey.tex
+++ b/latex/misc/survey.tex
@@ -46,8 +46,8 @@
 
 \noindent NAME: \line(1,0){150} \\
 \noindent \today \\
-%\noindent GEOS 627, Inverse Problems and Parameter Estimation, Carl Tape
-\noindent GEOS 626, Applied Seismology, Carl Tape
+\noindent GEOS 627, Inverse Problems and Parameter Estimation, Carl Tape
+%\noindent GEOS 626, Applied Seismology, Carl Tape
 
 \noindent
 %{\bf Purpose}: I'd like to collect some basic information about each of you, in order to adapt the course materials.
@@ -78,9 +78,9 @@ The `G' refers to your years at UAF. If you have a previous master's degree, ple
 
 \item Previous courses. Please list any classes you have taken that covered
 % 627
-%inverse problems or parameter estimation.
+inverse problems or parameter estimation.
 % 626
-seismology (or inverse problems).
+%seismology (or inverse problems).
 
 \begin{tabular}{l|l|l}
 \hline
