--- a/latex/misc/syllabus.tex
+++ b/latex/misc/syllabus.tex
@@ -66,11 +66,11 @@ Last compiled: \today
 % MARTIN ICE PHYSICS GEOS 614
 
 \begin{tabular}{ll}
-GEOS F627  & {\bf Inverse Problems and Parameter Estimation}, 3 credits (2+3), Spring 2017 \\
+GEOS F627  & {\bf Inverse Problems and Parameter Estimation}, 3 credits (2+3), Fall 2019 \\
 %Lab time: & Tuesday, 9:45--12:45 \\
 %Lecture time: & Thursday, 9:45--11:45 \\
-Lecture: & Monday, 12:00--14:00, 301 Elvey \\
-Lab: & Wednesday, 14:00--17:00, 310 Elvey \\
+Lecture: & Monday, 09:00--11:00, 407 IARC \\
+Lab: & Wednesday, 09:00--12:00, 307 Elvey \\
 %Meeting location: & TBD \\ %301N Elvey (Geophysical Institute) \\
 Prerequisites: & MATH 202 (Calculus III) and MATH 314 (Linear Algebra) %; or permission of instructor
 \end{tabular}
@@ -103,7 +103,7 @@ Textbook & R & S & Software & UAF       & Mather  &     & UAF     \\
 \cite{Tarantola2005} Tarantola & X & & none   & & X & X & \\ \hline
 \cite{MenkeE3} Menke           & & X & Matlab & & X & & X \\ \hline
 \cite{Parker} Parker           & & X & none   & & X & & \\ \hline
-\cite{WeisbergE4} Weisberg     & & X & R      & &   & & X \\ \hline
+\cite{WeisbergE4} Weisberg     & & X & R      & & X & & X \\ \hline
 \end{tabular} \\
 
 \cite{Tarantola2005} can be downloaded as a pdf from Tarantola's webpage. However, he writes: ``Here are the rules: i)~you are invited to download, view, and print the books; ii)~if you work in a commercial company, or in a rich institution (like a university in the developed world), and your plan is to use one of the books from time to time, please purchase it (links below).''
@@ -166,7 +166,7 @@ Upon completion of this course, students should be able to:
 
 %------------
 \pagebreak
-\item {\bf Course calendar (tentative).}
+\item {\bf Course content (tentative).}
 
 \hspace{-1.5cm}
 \begin{tabular}{cll|l|l|ll}
@@ -176,8 +176,8 @@ Upon completion of this course, students should be able to:
 %  &   &  & Review of vector calculus & AC & HW-2 & HW-3 \\ 
   &   &  & overview of inverse problems & A1 & --- & HW-1 \\
 \hline
-  &   &  & review of linear algebra & A-A, \verb+notes_matrix.pdf+ & &  \\
-  &   &  & LAB: Linux and Matlab & & & \\
+  &   &  & review of linear algebra & A-A, \verb+notes_linalg.pdf+ & &  \\
+  &   &  & LAB: Linux and Matlab & \verb+notes_matrix.pdf+ & & \\
 \hline
   &   &  & Taylor series and least squares & \verb+notes_taylor.pdf+ & HW-1 & HW-2 \\
   &   &  & LAB: least squares (\verb+lab_linefit.pdf+) & T3, A-C & & \\
@@ -202,10 +202,11 @@ Upon completion of this course, students should be able to:
 \hline
   &   &  & singular value decomposition & A3 & & \\
   &   &  & LAB: Aster Ch. 3 & & HW-6 & \\
-\hline\hline
-  &   &  & \multicolumn{4}{c}{SPRING BREAK (March 11--19)} \\
-  &   &  & \multicolumn{4}{c}{SPRING BREAK (March 11--19)} \\
-\hline\hline
+%\hline\hline
+%  &   &  & \multicolumn{4}{c}{SPRING BREAK (March 11--19)} \\
+%  &   &  & \multicolumn{4}{c}{SPRING BREAK (March 11--19)} \\
+%\hline\hline
+\hline
 &   &  & singular value decomposition & A3 & & HW7 \\
 &   &  & LAB: Aster Ch. 3 & & & \\
 \hline
@@ -246,13 +247,13 @@ For example, ``A-B'' means Appendix B of Aster's book (Ref \cite{AsterE2}); ``T7
 \begin{tabular}{lll}
 \hline
 %Official first day of instruction:                  & Tuesday & January 17 \\
-First class:                                        & Wednesday & January 18 \\
-Last day to add class:                              & Friday & January 27 \\
-Last day to drop class:                             & Friday & January 27 \\
-Last day for student- or faculty-initiated withdraw: & Friday & March 31 \\
-Last class:                                         & Wednesday & April 26 \\
-Final project report:                               & Wednesday & April 26 \\
-Final project presentation:                         & Wednesday & April 26 \\
+First class:                                        & Wednesday & August 28 \\
+Last day to add class:                              & Friday & September 6 \\
+Last day to drop class:                             & Friday & September 6 \\
+Last day for student- or faculty-initiated withdraw: & Friday & November 1 \\
+Last class:                                         & Wednesday & December 4 \\
+Final project report:                               & Wednesday & December 4 \\
+Final project presentation:                         & Wednesday & December 4 \\
 %Official last day of instruction:                   & Monday & May 1 \\
 \hline
 \end{tabular}
@@ -329,7 +330,7 @@ The Office of Disability Services implements the Americans with Disabilities Act
 \begin{spacing}{1.0}
 %\bibliographystyle{agu08}
 \bibliographystyle{ieeetr}
-\bibliography{preamble,REFERENCES,refs_carl,refs_socal,refs_alaska,refs_ice,refs_source}
+\bibliography{carl_abbrev,carl_main,carl_source,carl_calif,carl_him,carl_imaging,carl_alaska}
 \end{spacing}
 
 \end{enumerate}
