--- a/latex/lab_ch2.tex
+++ b/latex/lab_ch2.tex
@@ -22,7 +22,7 @@
 {\large \bf Lab Exercise: Aster examples, Chapters 2-3} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today \\
-\textcolor{red}{Answer questions in red for lab credit}
+%\textcolor{red}{Answer questions in red for lab credit}
 \end{spacing}
 
 \subsection*{Part I: Aster Chapter 2 examples}
@@ -35,7 +35,7 @@ Last compiled: \today \\
 
 \item What do you expect to happen to the samples of the posterior if you decrease \verb+PCONF+?
 
-\item \textcolor{red}{Write some lines of code to plot the $m_3$-vs-$m_1$ posterior samples overlain by confidence curves for 10\%, 20\%, \ldots, 90\%.}
+\item Write some lines of code to plot the $m_3$-vs-$m_1$ posterior samples overlain by confidence curves for 10\%, 20\%, \ldots, 90\%.
 
 Suggestion: Start by copying-and-pasting the relevant blocks of code to start a new figure.
 
@@ -55,7 +55,7 @@ Suggestion: Start by copying-and-pasting the relevant blocks of code to start a 
 \item Provide a succinct description of this inverse problem.
 \end{enumerate}
 
-\item \textcolor{red}{Explain the significance of the spike test results for this problem.}
+\item Explain the significance of the spike test results for this problem.
 
 \end{enumerate}
 
