--- a/latex/hw627_header.tex
+++ b/latex/hw627_header.tex
@@ -38,4 +38,6 @@
   {./figures/}
 }
 
+\newcommand{\repodir}{{\tt inverse}}
+
 \newcommand{\howmuchtime}{Approximately how much time {\em outside of class and lab time} did you spend on this problem set? Feel free to suggest improvements here.}
