nparm = 14 (not 15) in grav_template.m; other updates

--- a/latex/hw627_header.tex
+++ b/latex/hw627_header.tex
@@ -41,3 +41,13 @@
 \newcommand{\repodir}{{\tt inverse}}
 
 \newcommand{\howmuchtime}{Approximately how much time {\em outside of class and lab time} did you spend on this problem set? Feel free to suggest improvements here.}
+
+% provide space for students to write their solutions
+\newcommand{\vertgap}{\vspace{1cm}}
+
+\newcommand{\Gcolor}{\textcolor{red}{\bU}\bS\textcolor{blue}{\bV^T}}
+\newcommand{\Gpcolor}{\textcolor{red}{\bU_p}\,\bS_p\textcolor{blue}{\bV_p^T}}
+\newcommand{\Gdcolor}{\textcolor{blue}{\bV_p}\,\bS_p^{-1}\textcolor{red}{\bU_p^T}}
+\newcommand{\GcolorT}{\textcolor{blue}{\bV}\bS^T\textcolor{red}{\bU^T}}
+\newcommand{\GpcolorT}{\textcolor{blue}{\bV_p}\,\bS_p\textcolor{red}{\bU_p^T}}
+\newcommand{\GdcolorT}{\textcolor{red}{\bU_p}\,\bS_p^{-1}\textcolor{blue}{\bV_p^T}}
