--- a/latex/hw_ch1.tex
+++ b/latex/hw_ch1.tex
@@ -11,7 +11,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Problem Set 2: Aster Ch. 1} \\
+{\large \bf Problem Set 2: Aster Ch. 1 [ch1]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Assigned: September 4, 2019 --- Due: September 11, 2019 \\
 Last compiled: \today
@@ -26,13 +26,13 @@ Review Appendix A of \citet{AsterE2}. In your solutions, be sure to explain your
 %\pagebreak
 \subsection*{Problem 1 (1.0). Aster 1-1.}
 
-Consider a mathematical model of the form $G(\bem) = \bd$, where $\bem$ is a vector of length $n$, and $\bd$ is a vector of length $m$. Suppose that the model obeys the superposition and scaling laws and is thus linear. Show that $G(\bem)$ can be written in the form
+Consider a mathematical model of the form $G(\bem) = \bd$, where $\bem$ is a vector of length $\nparm$, and $\bd$ is a vector of length $\ndata$. Suppose that the model obeys the superposition and scaling laws and is thus linear. Show that $G(\bem)$ can be written in the form
 %
 \begin{equation}
 G(\bem) = \bG\bem
 \end{equation}
 %
-where $\bG$ is an $m \times n$ matrix.
+where $\bG$ is an $\ndata \times \nparm$ matrix.
 
 \medskip\noindent
 Hints:
@@ -61,7 +61,7 @@ Let us assume that $\byh$ points upward.
 The corresponding system of equations is
 %
 \begin{eqnarray}
-\bG \bem &=& \bd
+\bG \bem &=& \dvec
 \label{lsq}
 \\
 \left[
@@ -70,7 +70,7 @@ The corresponding system of equations is
 1 & t_2 & -(1/2)t_2^2 \\
 1 & t_3 & -(1/2)t_3^2 \\
 \vdots & \vdots & \vdots \\
-1 & t_m & -(1/2)t_m^2 \\
+1 & t_\ndata & -(1/2)t_\ndata^2 \\
 \end{array}
 \right]
 \left[
@@ -81,17 +81,17 @@ m_1 \\ m_2 \\ m_3
 &=& 
 \left[
 \begin{array}{c}
-y_1 \\ \vdots \\ y_m
+y_1 \\ \vdots \\ y_\ndata
 \end{array}
 \right]
 \end{eqnarray}
 %
-Let $m = n = 3$ in this problem, that is, {\bf there are $m=3$ people to make measurements of the trajectory.}
+Let $\ndata = \nparm = 3$ in this problem, that is, {\bf there are $\ndata=3$ people to make measurements of the trajectory.}
 We will assume that a ball is being shot from elevation $m_1$ (say, from the middle floor of a high-rise building) with vertical velocity $m_2$ in an environment with vertical acceleration given by $m_3$.
 Ignore realistic influences such as air friction.
-Each person will make one measurement of $(t_i,y_i)$.
+Each person will make one measurement of $(t_i,y_i)$; the measurement, like any measurement, should {\bf not} be assumed to be accurate (\i without any error).
 After the experiment, the measurements are tabulated.
-Your task is to solve for the $n=3$ unknowns $m_1, m_2, m_3$.
+Your task is to solve for the $\nparm=3$ unknowns $m_1, m_2, m_3$.
 %
 \begin{enumerate}
 \item (0.8) Describe the physical meaning of $m_1 < 0$, $m_1 = 0$, $m_1 > 0$.
@@ -113,12 +113,43 @@ Plot or sketch an example, as before.
 Plot or sketch an example, as before.
 \end{enumerate}
 %
-Hint: Row-reducing the $3 \times 3$ system of equations (perhaps with an online tool) may provide insights.
-
+Hint: Row-reducing the $3 \times 3$ system of equations (perhaps with an online tool) may provide insights. 
+% THIS WAS DONE IN MATHEMATICA
+In order to row-reduce the augmented matrix, I typed the following command into the online Mathematica platform {\em Wolfram Development Platform}: \\
+\verb+Simplify[MatrixForm[RowReduce[({{1,t1,-t1^2/2,y1},{1,t2,-t2^2/2,y2},{1,t3,-t3^2/2,y3}})]]]+
+and got the following result:
+%
+\begin{eqnarray}
+&& RREF \left[
+\begin{array}{cccc}
+1 & t_1 & -(1/2)t_1^2 & y_1 \\
+1 & t_2 & -(1/2)t_2^2 & y_2 \\
+1 & t_3 & -(1/2)t_3^2 & y_3 \\
+\end{array}
+\right]
+\nonumber \\ \nonumber \\
+&& =
+\left[
+\begin{array}{cccc}
+1 & 0 & 0 & D^{-1}\left[t_1 t_3(t_3-t_1)y_2 + t_2^2(t_3 y_1 - t_1 y_3) + t_2(t_1^2 y_3 - t_3^2 y_1) \right] \\
+& & & \\
+0 & 1 & 0 & D^{-1}\left[ t_1^2(y_2-y_3) + t_2^2(y_3 -y_1) + t_3^2(y_1-y_2)\right] \\
+& & & \\
+0 & 0 & 1 & 2D^{-1}\left[ t_1(y_2-y_3) + t_2(y_3 -y_1) + t_3(y_1-y_2)\right] \\
+\end{array}
+\right]
+\label{rref}
+\end{eqnarray}
+%
+where
+%
+\begin{equation}
+D = (t_1-t_2)(t_1-t_3)(t_2-t_3).
+\end{equation}
 
 %--------------------------------------------------------------
 
-%\pagebreak
+\pagebreak
 \subsection*{Problem 3a (1.0). Aster 1-3 modified.}
 
 Consider the borehole vertical seismic profile problem of Examples 1.3 and 1.9. Consider the continuous version of the problem, represented by Eq. (1.20):
@@ -152,7 +183,7 @@ Hint: fundamental theorem of calculus.
 
 %--------------------------------------------------------------
 
-\pagebreak
+%\pagebreak
 \subsection*{Problem 3b (3.0). Aster 1-3 modified.}
 
 Consider the borehole vertical seismic profile problem of Examples 1.3 and 1.9. Here we consider the discretized version of the problem. 
@@ -160,17 +191,17 @@ Consider the borehole vertical seismic profile problem of Examples 1.3 and 1.9. 
 For this problem we need some numbers and a computer. Assume the following:
 %
 \begin{itemize}
-\item There are $m=100$ equally spaced seismic sensors located at depths of $z = 0.2, 0.4, \ldots, 20$~m.
-\item The vertical slowness profile is represented by $n=m=100$ corresponding vertical intervals with midpoints at $z - 0.1$~m. Within each 0.2~m interval the slowness is assumed to be constant.
+\item There are $\ndata=100$ equally spaced seismic sensors located at depths of $z = 0.2, 0.4, \ldots, 20$~m.
+\item The vertical slowness profile is represented by $\nparm=\ndata=100$ corresponding vertical intervals with midpoints at $z - 0.1$~m. Within each 0.2~m interval the slowness is assumed to be constant.
 \item Let $v_0 = 1$~km/s be the velocity at the surface ($z=0$). Let the gradient in \refeq{vz} be $k = 40$~m/s per m.
 \end{itemize}
 
 \begin{enumerate}
 
-\item (0.0) Using your formula for $t(z)$ from the previous problem, compute \textcolor{red}{a noiseless synthetic data vector $\bd_{\rm exact}$} of predicted seismic travel times at the sensor depths, $t_i = t(z_i)$. 
+\item (0.0) Using your formula for $t(z)$ from the previous problem, compute \textcolor{red}{a noiseless synthetic data vector $\bd^{\rm exact}$} of predicted seismic travel times at the sensor depths, $t_i = t(z_i)$. 
 {\bf (No need to list any values or expressions for this part.)}
 
-\item (0.3)  Make two qualitative sketches like Figure 1.10, one containing model variables, the other containing data variable. Each sketch should include a coordinate axis and {\bf discretization points}. In either of the plots, include the labels $z$, $\Delta z$, $s_1$, $s_2$, $s_n$, $t_1$, $t_2$, $t_m$.
+\item (0.3)  Make two qualitative sketches like Figure 1.10, one containing model variables, the other containing data variable. Each sketch should include a coordinate axis and {\bf discretization points}. In either of the plots, include the labels $z$, $\Delta z$, $s_1$, $s_2$, $s_\nparm$, $t_1$, $t_2$, $t_\ndata$.
 
 Note: Do not list any numbers or draw the sketch to scale.
 
@@ -191,7 +222,7 @@ t_2 &=& ???
 \\
 \vdots
 \\
-t_m &=& ???
+t_\ndata &=& ???
 \end{eqnarray*}
 % 
 Write this system of equations in succinct form $\bd = \bG\bem$, and list the expressions for $\bd$, (matrix) $\bG$, and $\bem$.
@@ -203,29 +234,29 @@ Write this system of equations in succinct form $\bd = \bG\bem$, and list the ex
 \item (0.4) Using \refEq{vz}, calculate the true slowness values $\bem_{\rm true}$ at the midpoints of the $n$ intervals. (No need to show expressions or values.) Compute
 %
 \begin{equation}
-\bd_{\rm true} = \bG\bem_{\rm true}
+\bd^{\rm true} = \bG\bem_{\rm true}
 \end{equation}
 %
-and compare this with $\bd_{\rm exact}$ by superimposing the two curves in a plot of $t(z)$ (travel time) vs $z$ (sensor depth). (In all plots, please put depth on the $x$-axis.)
+and compare this with $\bd^{\rm exact}$ by superimposing the two curves in a plot of $t(z)$ (travel time) vs $z$ (sensor depth). (In all plots, please put depth on the $x$-axis.)
 
 \label{calc1}
 
 %-----
 
-\item (0.5) Using $\bd_{\rm exact}$, solve for the slowness $\bem$ as a function of depth using your $\bG$ matrix and the Matlab backslash operator (\verb+\+). Compare your $\bem$ and $\bem_{\rm true}$  graphically by superimposing the two curves in a plot of $s(z)$ (slowness) vs $z$ (interval midpoint depth).
+\item (0.5) Using $\bd^{\rm exact}$, solve for the slowness $\bem$ as a function of depth using your $\bG$ matrix and the Matlab backslash operator (\verb+\+). Compare your $\bem$ and $\bem_{\rm true}$  graphically by superimposing the two curves in a plot of $s(z)$ (slowness) vs $z$ (interval midpoint depth).
 
 \label{calc2}
 
 %-----
 
-\item (0.5) Generate a noisy travel time vector where independent normally distributed noise with a standard deviation of 0.05~ms ($5 \times 10^{-5}$~s) is added to the elements of $\bd_{\rm exact}$. (Hint: Matlab command \verb+randn+) Re-solve the system for $\bem$ and again compare your results graphically with $\bem_{\rm true}$. How has the model changed?
+\item (0.5) Generate a noisy travel time vector where independent normally distributed noise with a standard deviation of 0.05~ms ($5 \times 10^{-5}$~s) is added to the elements of $\bd^{\rm exact}$. (Hint: Matlab command \verb+randn+) Re-solve the system for $\bem$ and again compare your results graphically with $\bem_{\rm true}$. How has the model changed?
 
 
 \label{calc3}
 
 %-----
 
-\item (0.5) Repeat parts \ref{calc1}, \ref{calc2}, and \ref{calc3}, but for just $n=4$ sensor depths and corresponding slowness intervals. Keep the maximum depth as the same as before (20~m), and note that $\Delta z$ is no longer 0.2~m.
+\item (0.5) Repeat parts \ref{calc1}, \ref{calc2}, and \ref{calc3}, but for just $\nparm=4$ sensor depths and corresponding slowness intervals. Keep the maximum depth as the same as before (20~m), and note that $\Delta z$ is no longer 0.2~m.
 
 Is the recovery of the true model improved? Explain in terms of the condition numbers (Aster Section A.8; Matlab command \verb+cond+) of your $\bG$ matrices.
 
@@ -233,6 +264,7 @@ Is the recovery of the true model improved? Explain in terms of the condition nu
 
 %--------------------------------------------------------------
 
+\pagebreak
 \subsection*{Problem 4 (3.0). Aster 1-4 modified.}
 
 Find a journal article that discusses the solution of an inverse problem in a discipline of special interest to you. (For example, try a google scholar search such as ``ice physics inverse problem''.)
