--- a/latex/hw_ch2.tex
+++ b/latex/hw_ch2.tex
@@ -11,7 +11,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Problem Set 6: Aster Ch. 2} \\
+{\large \bf Problem Set 6: Aster Ch. 2 [ch2]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Assigned: October 9, 2019 --- Due: October 16, 2019 \\
 Last compiled: \today
