--- a/latex/hw_grav.tex
+++ b/latex/hw_grav.tex
@@ -6,9 +6,9 @@
 \renewcommand{\baselinestretch}{1.1}
 
 \newcommand{\rh}{\hat{r}}
-\newcommand{\ndata}{m}
-\newcommand{\nparm}{n}
-\newcommand{\ntrun}{p'}
+%\newcommand{\ndata}{m}
+%\newcommand{\nparm}{n}
+%\newcommand{\ntrun}{p'}
 
 \newcommand{\numdataG}{15}
 \newcommand{\numparmG}{14}
@@ -29,7 +29,7 @@
 \centering
 {\large \bf Problem Set 7: Regularization by truncated singular value decomposition} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
-Assigned: March 22, 2017 --- Due: April 3, 2017 \\
+Assigned: October 28, 2019 --- Due: November 4, 2019 \\
 Last compiled: \today
 \end{spacing}
 
