--- a/latex/lab_newton.tex
+++ b/latex/lab_newton.tex
@@ -5,7 +5,7 @@
 
 %\pagestyle{empty}
 
-\newcommand{\vertgap}{\vspace{1.5cm}}
+\renewcommand{\vertgap}{\vspace{1.5cm}}
 
 % change the figures to ``Figure L3'', etc
 \renewcommand{\thefigure}{L\arabic{figure}}
