--- a/latex/hw_cov.tex
+++ b/latex/hw_cov.tex
@@ -11,7 +11,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Problem Set 4: Covariance functions and Gaussian random fields} \\
+{\large \bf Problem Set 4: Covariance functions and Gaussian random fields [cov]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Assigned: September 23, 2019 --- Due: September 30, 2019 \\
 Last compiled: \today
