--- a/latex/hw_epi.tex
+++ b/latex/hw_epi.tex
@@ -11,7 +11,7 @@
 
 \begin{center}
 
-{\large \bf Problem Set 3: Probabilistic inversion for earthquake epicenter} \\
+{\large \bf Problem Set 3: Probabilistic inversion for earthquake epicenter [epi]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Assigned: September 11, 2019 --- Due: September 23, 2019 \\
 Last compiled: \today
